log
Wed 08 May 2024 07:28:03 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:15: error: unused variable ‘map’ [-Werror=unused-variable]
   45 |     TreeMap * map = (TreeMap *)malloc(sizeof(TreeMap));
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
a742b0b
Wed 08 May 2024 07:30:23 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:12: error: unused variable ‘pair’ [-Werror=unused-variable]
   46 |     Pair * pair = (Pair*)malloc (sizeof(Pair));
      |            ^~~~
treemap.c:45:16: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   45 |     TreeNode * nuevo= (TreeNode *)malloc(sizeof(TreeNode));
      |                ^~~~~
cc1: all warnings being treated as errors
Compilation failed
4906c0d
Wed 08 May 2024 07:36:18 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   45 |     TreeNode * mapa= (TreeMap*)malloc(sizeof(TreeMap));
      |                      ^
treemap.c:46:8: error: ‘nuevo’ undeclared (first use in this function)
   46 |     if(nuevo == NULL){
      |        ^~~~~
treemap.c:46:8: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:51:9: error: ‘TreeNode’ has no member named ‘root’
   51 |     mapa->root = NULL;
      |         ^~
treemap.c:52:9: error: ‘TreeNode’ has no member named ‘current’
   52 |     mapa->current = NULL;
      |         ^~
treemap.c:53:9: error: ‘TreeNode’ has no member named ‘lower_than’
   53 |     mapa->lower_than = lower_than;
      |         ^~
treemap.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
babab8a
Wed 08 May 2024 07:36:41 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   45 |     TreeNode * mapa= (TreeMap*)malloc(sizeof(TreeMap));
      |                      ^
treemap.c:51:9: error: ‘TreeNode’ has no member named ‘root’
   51 |     mapa->root = NULL;
      |         ^~
treemap.c:52:9: error: ‘TreeNode’ has no member named ‘current’
   52 |     mapa->current = NULL;
      |         ^~
treemap.c:53:9: error: ‘TreeNode’ has no member named ‘lower_than’
   53 |     mapa->lower_than = lower_than;
      |         ^~
treemap.c:55:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   55 |     return mapa;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
6cfbfc8
Wed 08 May 2024 07:36:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
50909c9
Wed 08 May 2024 07:39:12 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  4|7
total_score: 5/70
54940a2
Wed 08 May 2024 07:43:43 PM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  11|6
total_score: 15/70
67d4947
Thu 09 May 2024 03:50:55 AM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  11|6
total_score: 15/70
b941683
Thu 09 May 2024 03:54:52 AM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:80:46: error: ‘TreeNode’ has no member named ‘key’
   80 |             int cmp = strcmp(key, currentNode->key){
      |                                              ^~
treemap.c:80:52: error: expected ‘,’ or ‘;’ before ‘{’ token
   80 |             int cmp = strcmp(key, currentNode->key){
      |                                                    ^
treemap.c:80:17: error: unused variable ‘cmp’ [-Werror=unused-variable]
   80 |             int cmp = strcmp(key, currentNode->key){
      |                 ^~~
cc1: all warnings being treated as errors
Compilation failed
349a1d0
Thu 09 May 2024 03:56:24 AM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:86:75: error: expected ‘)’ before ‘;’ token
   86 |                     currentNode->left = (TreeNode*)malloc(sizeof(TreeNode);
      |                                                          ~                ^
      |                                                                           )
treemap.c:92:28: error: expected ‘;’ before ‘}’ token
   92 |                     return;
      |                            ^
      |                            ;
   93 | 
   94 |                     }
      |                     ~       
Compilation failed
588fb19
Thu 09 May 2024 03:56:53 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:87:38: error: ‘*(TreeNode *)malloc (32).pair’ may be used uninitialized [-Werror=maybe-uninitialized]
   87 |                     currentNode->left->pair->key = key;
      |                     ~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
3d947f5
Thu 09 May 2024 03:59:23 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:87:38: error: ‘*(TreeNode *)malloc (32).pair’ may be used uninitialized [-Werror=maybe-uninitialized]
   87 |                     currentNode->left->pair->key = key;
      |                     ~~~~~~~~~~~~~~~~~^~~~~~
treemap.c:101:43: error: ‘*(TreeNode *)malloc (32).pair’ may be used uninitialized [-Werror=maybe-uninitialized]
  101 |                         currentNode->right->pair->key = key;
      |                         ~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
82c83c2
Thu 09 May 2024 04:01:00 AM UTC: 
 treemap.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
f07beee
Thu 09 May 2024 04:02:36 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c:107:1: error: expected identifier or ‘(’ before ‘}’ token
  107 | }
      | ^
Compilation failed
7d327ad
Thu 09 May 2024 04:02:42 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
6d0022e
Thu 09 May 2024 04:47:24 AM UTC: 
 treemap.c | 67 ++++++++++++++++++++++++++++++++-------------------------------
 1 file changed, 34 insertions(+), 33 deletions(-)
 tests:  12|6
total_score: 15/70
4256a84
Thu 09 May 2024 04:48:36 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
679346e
Thu 09 May 2024 04:49:25 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
fb0a461
Thu 09 May 2024 04:49:44 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
2355883
Thu 09 May 2024 04:50:06 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  13|5
total_score: 25/70
72406e3
